--- a/Cryptopp-for-iOS/en.lproj/CryptoppDemoHashViewController_iPad.xib
+++ b/Cryptopp-for-iOS/en.lproj/CryptoppDemoHashViewController_iPad.xib
@@ -48,7 +48,7 @@
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-						<string key="IBUIText">Detail view content goes here</string>
+						<string key="IBUIText">Hash view content goes here</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -91,7 +91,7 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">detailDescriptionLabel</string>
+						<string key="label">DetailDescriptionLabel</string>
 						<reference key="source" ref="841351856"/>
 						<reference key="destination" ref="483876647"/>
 					</object>
@@ -133,7 +133,7 @@
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
-				<string key="-1.CustomClassName">CryptoppDemoDetailViewController</string>
+				<string key="-1.CustomClassName">CryptoppDemoHashViewController</string>
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -149,20 +149,20 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
-					<string key="className">CryptoppDemoDetailViewController</string>
+					<string key="className">CryptoppDemoHashViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="detailDescriptionLabel">UILabel</string>
-						<string key="detailItem">id</string>
+						<string key="DetailDescriptionLabel">UILabel</string>
+						<string key="DetailItem">id</string>
 						<string key="toolbar">UIToolbar</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="detailDescriptionLabel">
-							<string key="name">detailDescriptionLabel</string>
+						<object class="IBToOneOutletInfo" key="DetailDescriptionLabel">
+							<string key="name">DetailDescriptionLabel</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="detailItem">
-							<string key="name">detailItem</string>
+						<object class="IBToOneOutletInfo" key="DetailItem">
+							<string key="name">DetailItem</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="toolbar">
@@ -172,7 +172,7 @@
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CryptoppDemoDetailViewController.h</string>
+						<string key="minorKey">./Classes/CryptoppDemoHashViewController.h</string>
 					</object>
 				</object>
 			</array>
